<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SigninFragment">

    <TextView
        android:id="@+id/textViewSignin"
        android:layout_width="201dp"
        android:layout_height="0dp"
        android:layout_marginBottom="88dp"
        android:text="@string/txt_SignUp"
        android:textColor="#686868"
        android:linksClickable="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewSigninMsg"
        android:layout_width="201dp"
        android:layout_height="21dp"
        android:layout_marginTop="144dp"
        android:text=""
        android:textColor="#F10505"
        app:layout_constraintBottom_toTopOf="@+id/editTextUsernameSignin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.744" />

    <EditText
        android:id="@+id/editTextUsernameSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_userName"
        android:inputType="text"
        android:textColor="#020202"
        app:layout_constraintBottom_toTopOf="@+id/editTextPasswordSignin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPasswordSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txt_Password"
        android:inputType="textPassword"
        android:textColor="#040303"
        app:layout_constraintBottom_toTopOf="@+id/textViewSignin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/buttonLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewTitleSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_ViewTitleLogin"
        android:textColor="#090909"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewSigninMsg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>