<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="@string/signin_fragment_label"
    app:startDestination="@id/SigninFragment">

    <fragment
        android:id="@+id/SigninFragment"
        android:name="com.example.myexpense.SigninFragment"
        android:label="@string/signin_fragment_label"
        tools:layout="@layout/signin_fragment">
        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_SigninFragment_to_SignupFragment"
            app:destination="@id/SignupFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.myexpense.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">
        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/SigninFragment" />
    </fragment>
    <fragment
        android:id="@+id/SignupFragment"
        android:name="com.example.myexpense.SignupFragment"
        android:label="@string/signup_fragment_label"
        tools:layout="@layout/signup_fragment" >
        <action
            android:id="@+id/action_SignupFragment_to_ConfirmationFragment"
            app:destination="@id/ConfirmationFragment" />
    </fragment>
    <fragment
        android:id="@+id/ConfirmationFragment"
        android:name="com.example.myexpense.ConfirmationFragment"
        android:label="confirmation_fragment"
        tools:layout="@layout/confirmation_fragment" >
        <argument android:name="usrName"
            app:argType="string" />
        <action
            android:id="@+id/action_ConfirmationFragment_to_SigninFragment"
            app:destination="@id/SigninFragment" />
    </fragment>
</navigation>